[gd_scene load_steps=7 format=3 uid="uid://2gr2cmkiobfa"]

[ext_resource type="Script" path="res://Scenes/menu/main_menu.gd" id="1_ghmhn"]
[ext_resource type="Texture2D" uid="uid://bnaaux7kwtar3" path="res://assets/menu/menu_bg.png" id="1_h7nnp"]
[ext_resource type="Theme" uid="uid://cvhrwgxh48p4h" path="res://Scenes/level/custom_theme.tres" id="2_dyffx"]
[ext_resource type="FontFile" uid="uid://ibdd8p7nexah" path="res://assets/fonts/Arkitech Bold.ttf" id="3_ihnhm"]
[ext_resource type="FontFile" uid="uid://n4fcmggiwhc4" path="res://assets/fonts/Arkitech Medium.ttf" id="5_lwc7m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3arqv"]
bg_color = Color(0.00392157, 0.0862745, 0.152941, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.992157, 1, 0.988235, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_ghmhn")

[node name="MenuBg" type="Sprite2D" parent="."]
position = Vector2(640, 352)
texture = ExtResource("1_h7nnp")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 704.0
theme = ExtResource("2_dyffx")

[node name="LogiBotLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -319.0
offset_top = 50.0
offset_right = 319.0
offset_bottom = 192.0
grow_horizontal = 2
theme = ExtResource("2_dyffx")
theme_override_fonts/font = ExtResource("3_ihnhm")
theme_override_font_sizes/font_size = 72
text = "LOGIBOTS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 596.0
offset_right = 272.0
offset_bottom = 668.0
text = "exit to os"

[node name="ObjectHelpButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1128.0
offset_top = 596.0
offset_right = 1248.0
offset_bottom = 668.0
text = "Help"

[node name="DocsButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 976.0
offset_top = 596.0
offset_right = 1096.0
offset_bottom = 668.0
text = "Docs"

[node name="SelsectLevelButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 488.0
offset_right = 272.0
offset_bottom = 560.0
text = "SELECT LEVEL"

[node name="ContinueButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 380.0
offset_right = 272.0
offset_bottom = 452.0
text = "continue"

[node name="NewGameButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 272.0
offset_right = 272.0
offset_bottom = 344.0
text = "Select save"

[node name="Online" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Control/Online"]
layout_mode = 0
offset_left = 1027.0
offset_top = 39.0
offset_right = 1169.0
offset_bottom = 76.0
text = "Online Username"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Control/Online"]
layout_mode = 0
offset_left = 1030.0
offset_top = 76.0
offset_right = 1167.0
offset_bottom = 107.0

[node name="Audio" type="Control" parent="Control"]
anchors_preset = 0
offset_bottom = 6.0

[node name="Panel" type="Panel" parent="Control/Audio"]
layout_mode = 0
offset_left = 700.0
offset_top = 596.0
offset_right = 940.0
offset_bottom = 668.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3arqv")

[node name="HSlider" type="HSlider" parent="Control/Audio/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -107.0
offset_top = -41.0
offset_right = 107.0
grow_horizontal = 2
grow_vertical = 0
value = 50.0

[node name="Label" type="Label" parent="Control/Audio/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -119.0
offset_top = 5.0
offset_right = 119.0
offset_bottom = 49.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_lwc7m")
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HelpWindow" type="Window" parent="."]
transparent_bg = true
initial_position = 4
size = Vector2i(500, 500)
visible = false
theme = ExtResource("2_dyffx")

[node name="Panel" type="Panel" parent="HelpWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HelpWindow/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
bbcode_enabled = true
text = "[center][color=#e71d36][b][font_size=30]LogiDocs[/font_size][/b][/color][/center]
	Welcome to LogiDocs, here you can learn about [color=#ff9f1c]Bots[/color] and how to code them!

[font_size=20][b][color=#2ec4b6]General Info[/color][/b][/font_size]
	Bot have [b]2[/b] memory slots. Active and Memory. You can accsess them by [i][color=#ff9f1c]active[/color][/i] or [i][color=#ff9f1c]mem[/color][/i]. E.g. '[i]say [color=#ff9f1c]active[/color][/i]'.
	By default Active and memory have value of 0.
	To switch them you can use [i][color=#ff9f1c][b]swap[/b][/color][/i] command.
	To save active value to Memory you can use [i][color=#ff9f1c][b]save[/b][/color][/i] command.

[font_size=20][b][color=#2ec4b6]Movement[/color][/b][/font_size]
To move bot you need to use [b][color=#ff9f1c]move[/color][/b] command.
[i]Syntax:[/i]
	'move <direction>'
	<direction> = [code]up, down, left, right[/code]

	[b][color=#208c81]Advanced Movement[/color][/b]
[i]Syntax:[/i]
	'move <direction> <times>'
	<direction> = [code]up, down, left, right[/code]
	<times> = [code]integer number [/code]


[font_size=20][b][color=#2ec4b6]Calculation[/color][/b][/font_size]
	[b][color=#ff9f1c]add[/color][/b] command will add number to active slot.
	E.g. '[i][color=#ff9f1c]add 10[/color][/i] '.
	[b][color=#ff9f1c]sub[/color][/b] command will substract number from active slot.
	E.g. '[i][color=#ff9f1c]sub 3[/color][/i] '.
[i]Syntax:[/i]
	'add <number>'
	<number> can be any integer or memory slot [color=#ff9f1c]'active'[/color] or[color=#ff9f1c] 'mem'[/color].

[font_size=20][b][color=#2ec4b6]Communication[/color][/b][/font_size]
	To communicate with bots and speakers you use [b][color=#ff9f1c]say[/color][/b] and [b][color=#ff9f1c]listen[/color][/b] command.
	Use '[color=#ff9f1c]say[/color]' to say active number to the direction you chose.
	Use '[color=#ff9f1c]listen[/color]' to get number from the direction you chose.
	You can listen from any boxes, but say only to green boxes and bots.
	Bots are very silly. If they listen to some direction, they will wait until someone speak to them.
 
[i]Syntax:[/i]
	'say <direction>'
	'listen <direction>'

	<direction> = [code]up, down, left, right[/code]

[font_size=20][b][color=#2ec4b6]Code features[/color][/b][/font_size]
	[b][color=#208c81]Jumps[/color][/b]
	In code you can jump between lines. First of all you need to create an anchor.
	E.g. '[i][color=#ff9f1c]start:[/color][/i] '.
	Every anchor has ' : ' at the end.
	Then you can use any jump in this list.
[ul][b][color=#ff9f1c]jump[/color][/b] <anchor> 
[ul]
Gets you to the anchor.
[/ul]
[/ul]
[ul][b][color=#ff9f1c]jumpz[/color][/b] <anchor> 
[ul]
Gets you to the anchor if active number is [b][color=#ff9f1c]zero[/color][/b]. Otherwise just skip this line.
[/ul]
[/ul]
[ul][b][color=#ff9f1c]jumpl[/color][/b] <anchor> 
[ul]
Gets you to the anchor if active number is [color=#ff9f1c][b]less[/b][/color] than [b][color=#ff9f1c]zero[/color][/b]. Otherwise just skip this line.
[/ul]
[/ul]
[ul][b][color=#ff9f1c]jumpg[/color][/b] <anchor> 
[ul]
Gets you to the anchor if active number is [color=#ff9f1c][b]greater[/b][/color] than [b][color=#ff9f1c]zero[/color][/b]. Otherwise just skip this line.
[/ul]
[/ul]

	[b][color=#208c81]Functions[/color][/b]
	To create function you use '[b][color=#ff9f1c]func[/color][/b]' keyword.
	E.g. 'func func_name:
	And closed with andfunc.
	If you need to quit it you can use '[b][color=#ff9f1c]return[/color][/b]' keyword.
	E.g.:
		func func_name:
		add 2
		return
		endfunc
	To [b][color=#ff9f1c]call[/color][/b] a function just write func_name.


"
selection_enabled = true

[connection signal="pressed" from="Control/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Control/ObjectHelpButton" to="." method="_on_object_help_button_pressed"]
[connection signal="pressed" from="Control/DocsButton" to="." method="_on_docs_button_pressed"]
[connection signal="pressed" from="Control/SelsectLevelButton" to="." method="_on_selsect_level_button_pressed"]
[connection signal="pressed" from="Control/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Control/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="close_requested" from="HelpWindow" to="." method="_on_help_window_close_requested"]
